@@ -18,6 +18,8 @@
             * Billing :
                 - The Relation cache is now used in 'Line.related_document'.
                 - In 'models.Base._DELETABLE_INTERNAL_RTYPE_IDS', the RelationType ID 'REL_OBJ_LINE_RELATED_ITEM' has been removed.
+                - The handler 'signals.manage_line_deletion()' now avoid to re-compte the totals when its the whole entity (e.g. Invoice) which is being deleted.
+                  It's faster & it avoids some inconsistent states where the entity has no emitter/receiver in its 'save() too.
 
 
 == Version 2.6.7 ==
